ops/terraform/modules/aws-ec2-flask/ec2.tf
data "aws_vpc" "insights_vpc" {
  id = var.vpc_id
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

data "aws_subnet" "ec2_public_subnet_1" {
  id = var.vpc_public_subnets[0]
}

data "aws_subnet" "ec2_public_subnet_2" {
  id = var.vpc_public_subnets[1]
}

data "aws_subnet" "insights_private_subnet_us_east_1a" {
  id = var.ec2_insights_private_subnet_us_east_1a
}

data "aws_elb_service_account" "elb_service_account_insights" {
} 

# Secrets
resource "aws_secretsmanager_secret" "sm_init_ec2_key" {
  name = var.ec2_ssh_private_key_secret_name
}

resource "aws_secretsmanager_secret" "sm_init_ec2_key_pub" {
  name = var.ec2_ssh_public_key_secret_name
}

data "aws_secretsmanager_secret" "vm_github_personal_access_token_secret" {
  arn = var.secrets_manager_vm_github_personal_access_token_arn
}

resource "aws_secretsmanager_secret_version" "sm_init_ec2_key_pub_current" {
  secret_id = aws_secretsmanager_secret.sm_init_ec2_key_pub.id
  secret_string = tls_private_key.genkey.public_key_pem
}

resource "aws_secretsmanager_secret_version" "sm_init_ec2_key_current" {
  secret_id = aws_secretsmanager_secret.sm_init_ec2_key.id   
  secret_string = tls_private_key.genkey.private_key_pem
}

data "aws_secretsmanager_secret_version" "vm_github_personal_access_token_secret_version" {
  secret_id = data.aws_secretsmanager_secret.vm_github_personal_access_token_secret.id
}

#
# Networking
#
resource "aws_security_group" "security_group_ec2" {
  name              = "${local.environment}-${local.resource_name_prefix}-ec2-security-group"
  description       = "SG for ec2 instance that hosts ${local.resource_name_prefix} flask api"
  vpc_id            = var.vpc_id

  tags = {
    Name = "${local.environment}-${local.resource_name_prefix}-ec2-security-group"
  }
}

# Allow ingress from HTTP port
resource "aws_security_group_rule" "security_group_rule_ec2_http_ingress" {
  type                      = "ingress"
  from_port                 = 80
  to_port                   = 80
  protocol                  = "tcp"
  security_group_id         = aws_security_group.security_group_ec2.id
  source_security_group_id  = var.alb_security_group_id
}

# Allow any ingress to EC2 via SSH
resource "aws_security_group_rule" "security_group_rule_ec2_ssh_ingress" {
  type                      = "ingress"
  from_port                 = 22
  to_port                   = 22
  protocol                  = "tcp"
  security_group_id         = aws_security_group.security_group_ec2.id
  cidr_blocks               = ["0.0.0.0/0"]
}

# Allow connectivity from EC2 to RDS
resource "aws_security_group_rule" "security_group_rule_ec2_egress_all" {
  type        = "egress"
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.security_group_ec2.id
}

# EC Server
resource "tls_private_key" "genkey" {
  algorithm = "RSA"
  rsa_bits = 4096
}

resource "aws_key_pair" "ssh-key" {
  key_name   = "${local.environment}-${local.resource_name_prefix}-ec2-ssh-key"
  public_key = tls_private_key.genkey.public_key_openssh
}

resource "aws_instance" "ec2_api_instance" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.ec2_instance_type
  key_name      = aws_key_pair.ssh-key.key_name

  user_data     = base64encode(templatefile("${path.module}/init.sh", local.template_file_vars))
  
  subnet_id     = data.aws_subnet.ec2_public_subnet_1.id

  vpc_security_group_ids = [aws_security_group.security_group_ec2.id]

  tags = {
    Name = "${local.environment}-${local.resource_name_prefix}-ec2-instance-1"
  }
}
